[project]
name = "cicdtry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "loguru>=0.7.3",
    "bcrypt>=3.2.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
